[package]
name = "viewimg"
version = "0.8.1"
authors = ["mandeep <mandeep@users.noreply.github.com>"]
license = "MIT"
edition = "2018"
description = "OpenEXR and HDR image viewer"
homepage = "https://github.com/mandeep/viewimg"
repository = "https://github.com/mandeep/viewimg"
documentation = "https://github.com/mandeep/viewimg"
readme = "README.md"

[dependencies]
clap = "2.33"
exr = "=0.7.3"
image2 = "0.11.3"
pixels = "0.0.2"
winit = "0.27"
winit_input_helper = "0.13"
rayon = "1.3.0"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true
